--- a/SqlToExcel/Com.Centaline.Framework.SqlExport/Com.Centaline.Framework.SqlExport.csproj
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport/Com.Centaline.Framework.SqlExport.csproj
@@ -65,13 +65,6 @@
     <Compile Include="Entity\Result.cs" />
     <Compile Include="Interface\IDbToCsv.cs" />
     <Compile Include="Interface\IDbToExcel.cs" />
-    <Compile Include="Modules\Common\ConfigInfo.cs" />
-    <Compile Include="Modules\Common\ConstValue.cs" />
-    <Compile Include="Modules\Common\DomainValidateAD.cs" />
-    <Compile Include="Modules\Common\Method.cs" />
-    <Compile Include="Modules\Common\RemotingServiceCommon.cs" />
-    <Compile Include="Modules\Common\UserLoginInfo.cs" />
-    <Compile Include="Modules\Common\UserSession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interface\ISqlExportService.cs" />
     <Compile Include="SqlExportContext.cs" />
@@ -84,6 +77,9 @@
     <EmbeddedResource Include="Resource\SpringObjects.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Modules\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
