--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/bin/SqlToExcel.dll.config
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/bin/SqlToExcel.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -42,7 +42,8 @@
  
   
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SqlToExcel-20161208093758.mdf;Initial Catalog=aspnet-SqlToExcel-20161208093758;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-SqlToExcel-20161208093758.mdf;Initial Catalog=aspnet-SqlToExcel-20161208093758;Integrated Security=True;User Instance=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
