--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/bin/SqlToExcel.dll.config
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/bin/SqlToExcel.dll.config
@@ -8,6 +8,7 @@
  
 
 <configuration>
+  
   <configSections>
     
       <section name="SpringAppKeys" type="System.Configuration.NameValueSectionHandler" />
@@ -46,6 +47,23 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+   
+    <add key="ADLogin" value="http://10.4.1.206/ecomservice/CommunicateService.svc/ADLogin"/>
+    <add key="DbPath" value="Resource\DataBase\Database1.mdb"/>
+    <add key="DbConnectionStr" value="Provider=Microsoft.Jet.OLEDB.4.0;Data Source={0};Jet OLEDB:Database Password=123321;"/>
+    <add key="PageSize" value="20"/>
+    <add key="MaxVoteCount" value="3"/>
+    <add key="CanVoteCheck" value="0"/>
+    <add key="ServerName" value="10.4.254.30\webchat"/>
+    <add key="UserName" value="itdept"/>
+    <add key="UserPwd" value="it.good"/>
+    <add key ="DataBase" value="WeChatOrg"/>
+    <add key ="ValidateType" value="SQL Server身份验证"/>
+    <add key ="ProviderName" value="SQL"/>
+  
+    
+    <add key="whitelist" value="centaline\wanglin36"/>
+    
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
