add the functionalities of deferred execution

--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Web.config
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -43,26 +43,25 @@
  
   
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-SqlToExcel-20161208093758.mdf;Initial Catalog=aspnet-SqlToExcel-20161208093758;Integrated Security=True;User Instance=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-SqlToExcel-20161208093758.mdf;Initial Catalog=aspnet-SqlToExcel-20161208093758;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
    
-    <add key="ADLogin" value="http://10.4.1.206/ecomservice/CommunicateService.svc/ADLogin"/>
-    <add key="DbPath" value="Resource\DataBase\Database1.mdb"/>
-    <add key="DbConnectionStr" value="Provider=Microsoft.Jet.OLEDB.4.0;Data Source={0};Jet OLEDB:Database Password=123321;"/>
-    <add key="PageSize" value="20"/>
-    <add key="MaxVoteCount" value="3"/>
-    <add key="CanVoteCheck" value="0"/>
+    <add key="ADLogin" value="http://10.4.1.206/ecomservice/CommunicateService.svc/ADLogin" />
+    <add key="DbPath" value="Resource\DataBase\Database1.mdb" />
+    <add key="DbConnectionStr" value="Provider=Microsoft.Jet.OLEDB.4.0;Data Source={0};Jet OLEDB:Database Password=123321;" />
+    <add key="PageSize" value="20" />
+    <add key="MaxVoteCount" value="3" />
+    <add key="CanVoteCheck" value="0" />
     
-    <add key="ServerName" value="10.4.254.30\webchat"/>
-    <add key="UserName" value="itdept"/>
-    <add key="UserPwd" value="it.good"/>
-    <add key ="DataBase" value="WeChatOrg"/>
-    <add key ="ValidateType" value="SQL Server身份验证"/>
-    <add key ="ProviderName" value="SQL"/>
-    <add key ="filename" value="d:/export.xlsx"/>
-    <add key="whitelist" value="centaline\wanglin36"/>
+    <add key="ServerName" value="10.4.254.30\webchat" />
+    <add key="UserName" value="itdept" />
+    <add key="UserPwd" value="it.good" />
+    <add key="DataBase" value="WeChatOrg" />
+    <add key="ValidateType" value="SQL Server身份验证" />
+    <add key="ProviderName" value="SQL" />
+    <add key="filename" value="d:/export.xlsx" />
+    <add key="whitelist" value="centaline\wanglin36" />
     
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
