--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/packages.config
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/packages.config
@@ -57,5 +57,11 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="Spring.Core" version="2.0.1" targetFramework="net452" />
+  <package id="System.Reactive" version="3.1.1" targetFramework="net452" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net452" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net452" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net452" />
+  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net452" />
+  <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
