--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Com.Centaline.Framework.SqlExport.Test.Web.csproj
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Com.Centaline.Framework.SqlExport.Test.Web.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Module\Common\RemotingServiceCommon.cs" />
     <Compile Include="Module\Common\UserLoginInfo.cs" />
     <Compile Include="Module\Common\UserSession.cs" />
+    <Compile Include="Module\Mail\Sendmail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -279,7 +280,10 @@
     <Content Include="Resource\Scripts\jquery-1.10.2.js" />
     <Content Include="Resource\Scripts\jquery-1.10.2.min.js" />
     <None Include="Resource\Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Resource\Scripts\jquery-1.8.3.min.js" />
     <Content Include="Resource\Scripts\jquery.twbsPagination.min.js" />
+    <Content Include="Resource\Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Resource\Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Resource\Scripts\jquery.validate.js" />
     <Content Include="Resource\Scripts\jquery.validate.min.js" />
     <Content Include="Resource\Scripts\jquery.validate.unobtrusive.js" />
@@ -289,6 +293,8 @@
     <Content Include="Resource\Scripts\respond.min.js" />
     <Content Include="Resource\Scripts\template.js" />
     <Content Include="Resource\Scripts\_references.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
