--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/bin/SqlToExcel.dll.config
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/bin/SqlToExcel.dll.config
@@ -45,6 +45,8 @@
     <add key="ValidateType" value="SQL Server身份验证" />
     <add key="ProviderName" value="SQL" />
     <add key="whitelist" value="centaline\wanglin36" />
+
+    <!--<add key="UnobtrusiveJavaScriptEnabled" value="true" />-->
   </appSettings>
   <system.web>
     <authentication mode="None" />
