--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Web.DEV.config
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Web.DEV.config
@@ -14,6 +14,27 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <!--这里是一个替换的操作,注意这里用了xdt:Locator来匹配name特性-->
+    <add name="SQLConnectionString"
+         connectionString="我要连接生产数据库服务器"
+         providerName="System.Data.SqlClient"
+         xdt:Locator="Match(name)"
+         xdt:Transform="Replace"/>
+
+    <!--这里是一个插入的操作,这里直接是插入,所以不需要用xdt:Locator-->
+    <add name="插入了噢~"
+         connectionString="我是使用web.config发布文件替换时出来的"
+         providerName="这功能可以不?"
+         xdt:Transform="Insert"/>
+
+    <!--这里是一个移除的操作,注意这里用了xdt:Locator来匹配name特性,
+        这样转换系统才会知道在发布时应该对那个节点进行移除操作-->
+    <add name="Remove" connectionString="" providerName=""
+         xdt:Locator="Match(name)"
+         xdt:Transform="Remove"/>
+
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
