--- a/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Web.config
+++ b/SqlToExcel/Com.Centaline.Framework.SqlExport.Test.Web/Web.config
@@ -39,6 +39,19 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>-->
   </system.web>
+
+  <connectionStrings>
+    <clear/>
+    <add name="SQLConnectionString"
+         connectionString="这里是开发用的!调试程序是否正确执行"
+         providerName="System.Data.SqlClient"/>
+
+    <add name="Remove"
+         connectionString="我最终都会被挪掉"
+         providerName="  楼上的!这是你的使命  "/>
+  </connectionStrings>
+
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
